remove eval; scalability

--- a/lib/resources/config/config.default.yml
+++ b/lib/resources/config/config.default.yml
@@ -2,6 +2,9 @@
 assets:
 
     enabled: true
+
+    # regular expression pattern to parse assets tags
+    tagPattern: assets\\((.*)\\)
     
     # should a version be appended
     appendVersion: true
